# qualamity

./: .gitignore  .qualamity.yaml  LICENSE  README.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: testing.yaml
example/: Makefile  README.md  report.csv
example/include/: bad_header.h  good_header.h  middle_header.h
example/src/: abs.c  global.c  ko.c  main.c  my_function.c  nothing.c  print_string.c
qualamity/: __init__.py  __main__.py  builtin_rules.py  config.py  doxygen.py  latex.py  linter.py  loader.py  log_formatter.py  report.py
qualamity/assets/: doxygen.conf  logging.yaml  preambule.tex  standard_functions.txt
qualamity/assets/fake_libc_include/: LICENSE  README.md  argp.h  iso646.h  termios.h
qualamity/assets/fake_libc_include/json-c/: json.h
qualamity/assets/fake_libc_include/openssl/: ssl.h
